# data_engineering_project

./: .gitignore  pyproject.toml
.github/: CODEOWNERS
terraform/: variable.tf
